# Market-Data-ETL-Platform

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: pipeline.yml
dags/: market_data_etl_dag.py
sql/: 001_create_tables.sql
src/: cli.py  pipeline.py  settings.py  utils.py
src/ingestion/: stooq.py  synthetic.py
src/quality/: audit.py
src/staging/: validate.py
src/transforms/: models.py
src/warehouse/: db.py  load.py
tests/: test_transforms.py
